# grpc-example

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.cmake/api/v1/reply/: cache-v2-24b3f178e7a659d50af8.json  cmakeFiles-v1-7a45636eb59c3454a4a9.json  codemodel-v2-17ac266d22cccc9edaa4.json  index-2022-12-28T08-10-25-0313.json  target-address_proto-Release-e1f85851abf408fa1b2e.json  target-address_svc-Release-ee00186d784c00532ca6.json  target-server-Release-a28c17e12d79ab655007.json
api/address/: CMakeLists.txt  address.proto  addressbook.proto
internal/: CMakeLists.txt
internal/service/: AddressBookService.cpp  AddressBookService.h
